packages/secretnote/src/modules/layout/index.less
.secretnote-page {
  overflow: hidden;
  width: 100%;
  height: 100%;

  .mana-splitpanel {
    height: calc(100% - 48px);
  }

  .secretnote-page-preview-content {
    height: calc(100% - 48px);
    padding: 24px;
  }

  .libro-header-right {
    padding-right: 12px;
  }

  .libro-view-content {
    box-sizing: border-box;
  }
}

.secretnote-header {
  border-bottom: 1px solid var(--mana-secretnote-divider-color);

  .logo {
    display: inline-flex;
    height: 100%;
    align-items: center;
    padding-left: 24px;
    cursor: pointer;

    .title {
      font-size: 18px;
      font-weight: 500;
    }
  }
}

.secretnote-sidebar {
  position: relative;
  overflow: hidden auto;
  width: 100%;
  height: 100%;
  border-right: 1px solid var(--mana-secretnote-divider-color);
  background-color: var(--mana-secretnote-sidebar-background);

  .statusbar {
    position: absolute;
    bottom: 150px;
    width: 100%;
    border-top: 1px solid var(--mana-secretnote-divider-color);
  }
}

